# TernaryCNN-Resnet

./: .gitignore  README.md  pyproject.toml
src/ternarycnn_resnet/: __init__.py  checkpoints.py  data.py  engine.py  evaluate.py  models.py  train.py
tests/: test_checkpoints.py  test_data.py  test_models.py
