[build-system]
requires = ["uv_build>=0.11.28,<0.12"]
build-backend = "uv_build"

[project]
name = "ternarycnn-resnet"
version = "0.1.0"
description = "Training and evaluation tools for ternary ResNet models."
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = { file = "LICENSE" }
dependencies = [
    "ternarycnn @ git+https://github.com/qinhy/TernaryCNN.git",
    "torch>=2.2",
    "torchvision>=0.17",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5",
    "ruff>=0.12",
]
experiment = [
    "matplotlib>=3.8",
    "pandas>=2.2",
    "tensorboard>=2.17",
]

[[tool.uv.index]]
name = "torch-cuda"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[project.scripts]
train-resnet = "ternarycnn_resnet.train:main"
evaluate-resnet = "ternarycnn_resnet.evaluate:main"

[tool.uv.sources]
ternarycnn = { path = "../TernaryCNN", editable = true }
torch = { index = "torch-cuda" }
torchvision = { index = "torch-cuda" }

[tool.uv.build-backend]
module-name = "ternarycnn_resnet"
module-root = "src"

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

